--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ before_install:
   - export PATH=${PWD}/swift-2.2-SNAPSHOT-2016-01-06-a-ubuntu14.04/usr/bin:"${PATH}"
 script:
   - swift build
+notifications:
+  email:
+    on_success: never
+    on_failure: change
