--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+language: swift
+
 os:
   - linux
   - osx
@@ -16,7 +18,7 @@ matrix:
 
 script:
   - swift build
-  
+
 notifications:
   email:
     on_success: never
