--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,20 @@
-language: swift
-
 os:
   - linux
   - osx
-
-matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
-    - os: osx
-      osx_image: xcode7.3
-
-before_install:
-  - make ci-setup
-
+language: generic
+sudo: required
+dist: trusty
+osx_image: xcode7.3
+install:
+  - curl -sL https://gist.github.com/kylef/5c0475ff02b7c7671d2a/raw/621ef9b29bbb852fdfd2e10ed147b321d792c1e4/swiftenv-install.sh | bash
 script:
+  - . ~/.swiftenv/init
   - swift build
 
 notifications:
   email:
     on_success: never
     on_failure: change
+
+
+
