--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,15 @@ language: generic
 sudo: required
 dist: trusty
 osx_image: xcode7.3
+services:
+  - redis-server
 install:
   - curl -sL https://gist.github.com/kylef/5c0475ff02b7c7671d2a/raw/621ef9b29bbb852fdfd2e10ed147b321d792c1e4/swiftenv-install.sh | bash
 script:
   - . ~/.swiftenv/init
+  - make redis
   - swift build
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make xctest; fi
-
 notifications:
   email:
     on_success: never
