--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
   - . ~/.swiftenv/init
   - swift build
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make xctest; fi
+  - .build/debug/RedbirdExample 
 notifications:
   email:
     on_success: never
