moving path exporting

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ install:
 script:
   - . ~/.swiftenv/init
   - swift build
+  - export PATH="$PWD/redis-stable/src/:$PATH"
   - make redis-start
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make xctest; fi
-  - .build/debug/RedbirdExample 
+  - .build/debug/RedbirdExample
 notifications:
   email:
     on_success: never
