--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
   - curl -sL https://gist.githubusercontent.com/czechboy0/77c97b4ced37b512d1a2/raw/43dc2c4fe4c2537f368c23f4a211c77cebabcda2/redis-local-install.sh | bash
   - curl -sL https://gist.githubusercontent.com/czechboy0/6539d0586a2c080e403c/raw/66eae4e588fd43f00d85ca768db46f7ceae89566/swiftenv-install.sh | bash
 script:
+  - . ~/.swiftenv/init
   - swift build
   - export PATH="$PWD/redis-stable/src/:$PATH"
   - make redis-start
