--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,15 @@ install:
   - curl -sL https://gist.github.com/kylef/5c0475ff02b7c7671d2a/raw/621ef9b29bbb852fdfd2e10ed147b321d792c1e4/swiftenv-install.sh | bash
 script:
   - . ~/.swiftenv/init
-  - swift build
   - export PATH="$PWD/redis-stable/src/:$PATH"
   - make redis-start
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make xctest; fi
-  - .build/debug/RedbirdExample
+  - git clone https://github.com/apple/swift-package-manager swiftpm
+  - cd swiftpm && git checkout 0373b84 && cd ../
+  - swiftpm/Utilities/bootstrap
+  - ${PWD}/swiftpm/.build/debug/swift-build
+  - ${PWD}/swiftpm/.build/debug/swift-test
+  # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make xctest; fi
+  - make example
 notifications:
   email:
     on_success: never
