--- a/XcodeProject/Redbird.xcodeproj/xcshareddata/xcschemes/Redbird.xcscheme
+++ b/XcodeProject/Redbird.xcodeproj/xcshareddata/xcschemes/Redbird.xcscheme
@@ -16,8 +16,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3A4B6D5D1C6BDC79001E1469"
-               BuildableName = "Redbird"
-               BlueprintName = "Redbird"
+               BuildableName = "RedbirdExe"
+               BlueprintName = "RedbirdExe"
                ReferencedContainer = "container:Redbird.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -34,8 +34,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3A4B6D5D1C6BDC79001E1469"
-            BuildableName = "Redbird"
-            BlueprintName = "Redbird"
+            BuildableName = "RedbirdExe"
+            BlueprintName = "RedbirdExe"
             ReferencedContainer = "container:Redbird.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -57,8 +57,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3A4B6D5D1C6BDC79001E1469"
-            BuildableName = "Redbird"
-            BlueprintName = "Redbird"
+            BuildableName = "RedbirdExe"
+            BlueprintName = "RedbirdExe"
             ReferencedContainer = "container:Redbird.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -76,8 +76,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3A4B6D5D1C6BDC79001E1469"
-            BuildableName = "Redbird"
-            BlueprintName = "Redbird"
+            BuildableName = "RedbirdExe"
+            BlueprintName = "RedbirdExe"
             ReferencedContainer = "container:Redbird.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
