--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,8 @@ script:
   - . ~/.swiftenv/init
   - export PATH="$PWD/redis-stable/src/:$PATH"
   - make redis-start
-  - git clone https://github.com/apple/swift-package-manager swiftpm
-  - cd swiftpm && git checkout 0373b84 && cd ../
-  - swiftpm/Utilities/bootstrap
-  - ${PWD}/swiftpm/.build/debug/swift-build
-  - ${PWD}/swiftpm/.build/debug/swift-test
+  - swift build
+  - swift test
   # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make xctest; fi
   - make example
 notifications:
