--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,12 @@ dist: trusty
 osx_image: xcode7.3
 install:
   - bash TestRedis/install_redis_local.sh
-  - curl -sL https://gist.github.com/kylef/5c0475ff02b7c7671d2a/raw/621ef9b29bbb852fdfd2e10ed147b321d792c1e4/swiftenv-install.sh | bash
+  - eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710e83cd0bbe7dcdf/swiftenv-install.sh)"
 script:
-  - . ~/.swiftenv/init
   - export PATH="$PWD/redis-stable/src/:$PATH"
   - make redis-start
   - swift build
   - swift test
-  # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make xctest; fi
   - make example
 notifications:
   email:
