--- a/circle.yml
+++ b/circle.yml
@@ -4,11 +4,15 @@ machine:
 dependencies:
   override:
     - eval "$(curl -sL https://apt.vapor.sh)"
-    - sudo apt-get install vapor cmysql
+    - sudo apt-get install swift vapor cmysql
     - sudo chmod -R a+rx /usr/
 test:
   override:
     - swift build
     - swift build -c release
     - swift test
-    
+    - sudo apt-get remove swift
+    - sudo apt-get install swift-beta
+    - swift build
+    - swift build -c release
+    - swift test
