--- a/circle.yml
+++ b/circle.yml
@@ -1,18 +1,31 @@
-machine:
-  services:
-    - redis
-dependencies:
-  override:
-    - eval "$(curl -sL https://apt.vapor.sh)"
-    - sudo apt-get install swift vapor cmysql
-    - sudo chmod -R a+rx /usr/
-test:
-  override:
-    - swift build
-    - swift build -c release
-    - swift test
-    - sudo apt-get remove swift
-    - sudo apt-get install swift=3.1.1
-    - swift build
-    - swift build -c release
-    - swift test
+version: 2
+
+jobs:
+  linux:
+    docker:
+      - image: swift:4.0
+      - image: redis
+    steps:
+      - run: apt-get install -y libssl-dev
+      - checkout
+      - run: swift build
+      - run: swift test
+
+  # 3.1 backward compat checks
+
+  linux-3:
+    docker:
+      - image: swift:3.1
+      - image: redis
+    steps:
+      - run: apt-get install -y libssl-dev
+      - checkout
+      - run: swift build
+      - run: swift test
+
+workflows:
+  version: 2
+  tests:
+    jobs:
+      - linux
+      - linux-3
