--- a/circle.yml
+++ b/circle.yml
@@ -1,24 +1,22 @@
 version: 2
 
 jobs:
-  linux:
-    docker:
-      - image: swift:4.0
-      - image: redis
+  macos:
+    macos:
+      xcode: "9.0"
     steps:
-      - run: apt-get install -y libssl-dev
+      - run: brew install redis
+      - run: brew services start redis
       - checkout
       - run: swift build
       - run: swift test
 
-  # 3.1 backward compat checks
-
-  linux-3:
+  linux:
     docker:
-      - image: swift:3.1
-      - image: redis
+      - image: swift:4.0
+      - image: redis:3.2
     steps:
-      - run: apt-get install -y libssl-dev
+      - run: apt-get install -yq libssl-dev
       - checkout
       - run: swift build
       - run: swift test
@@ -27,5 +25,5 @@ workflows:
   version: 2
   tests:
     jobs:
+      - macos
       - linux
-      - linux-3
