--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,20 @@
 version: 2
 
 jobs:
+  macos:
+    macos:
+      xcode: "9.0"
+    steps:
+      - run: brew install redis vapor/tap/vapor
+      - run: brew services start redis
+      - checkout
+      - run: swift build
+      - run: swift test
+
   linux:
     docker:
-      - image: swift:4.0
-      - image: redis
+      - image: swift:4.0.3
+      - image: redis:3.2
     steps:
       - run: apt-get install -y libssl-dev
       - checkout
@@ -15,8 +25,8 @@ jobs:
 
   linux-3:
     docker:
-      - image: swift:3.1
-      - image: redis
+      - image: swift:3.1.1
+      - image: redis:3.2
     steps:
       - run: apt-get install -y libssl-dev
       - checkout
@@ -27,5 +37,6 @@ workflows:
   version: 2
   tests:
     jobs:
+      - macos
       - linux
       - linux-3
