--- a/circle.yml
+++ b/circle.yml
@@ -3,29 +3,22 @@ version: 2
 jobs:
   macos:
     macos:
-      xcode: "9.0"
+      xcode: "9.2"
     steps:
-      - run: brew install redis
-      - run: brew services start redis
       - checkout
       - run: swift build
-      # - run: swift build -c release
       - run: swift test
-
   linux:
     docker:
-      - image: swift:4.0
+      - image: norionomura/swift:swift-4.1-branch
       - image: redis:3.2
     steps:
-      - run: apt-get install -yq libssl-dev
       - checkout
       - run: swift build
-      # - run: swift build -c release
       - run: swift test
-
 workflows:
   version: 2
   tests:
     jobs:
-      - macos
       - linux
+      # - macos
