trying to see how easy swiftlint is to run in Current docker image

--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ jobs:
       - image: redis:3.2
     steps:
       - checkout
+      - run: swiftlint
       - run: swift build
       - run: swift test
       - run: swift build -c release
