swiftlint task different then beta build task because of swift versions available for swiftlint images

--- a/circle.yml
+++ b/circle.yml
@@ -14,13 +14,19 @@ jobs:
       - image: redis:3.2
     steps:
       - checkout
-      - run: swiftlint
       - run: swift build
       - run: swift test
       - run: swift build -c release
+  swiftlint:
+     docker:
+       - image: norionomura/swiftlint
+     steps:
+       - checkout
+       - run: swiftlint --strict
 workflows:
   version: 2
   tests:
     jobs:
       - linux
+      - swiftlint
       # - macos
