--- a/circle.yml
+++ b/circle.yml
@@ -23,10 +23,24 @@ jobs:
      steps:
        - checkout
        - run: swiftlint --strict
+  authlinux:
+    docker:
+      - image: codevapor/swift:4.1
+      - image: redis:3.2
+        command: >
+          --slaveof 10.0.0.2 6379
+          --requirepass secret
+    steps:
+      - checkout
+      - run: swift build
+      - run: swift test
+      - run: swift build -c release
+    
 workflows:
   version: 2
   tests:
     jobs:
       - linux
       - swiftlint
+      - authlinux
       # - macos
