--- a/circle.yml
+++ b/circle.yml
@@ -23,7 +23,8 @@ jobs:
      steps:
        - checkout
        - run: swiftlint --strict
-  authlinux:
+  #authlinux:
+  build:
     docker:
       - image: codevapor/swift:4.1
       - image: redis:3.2
