--- a/circle.yml
+++ b/circle.yml
@@ -34,8 +34,7 @@ jobs:
      steps:
        - checkout
        - run: swiftlint --strict
-  #authlinux:
-  build:
+  authlinux:
     docker:
       - image: codevapor/swift:4.1
       - image: redis:3.2
