--- a/circle.yml
+++ b/circle.yml
@@ -34,7 +34,9 @@ jobs:
      steps:
        - checkout
        - run: swiftlint --strict
-  authlinux:
+       
+
+  linux-auth:
     docker:
       - image: codevapor/swift:4.1
       - image: redis:3.2
@@ -55,7 +57,7 @@ workflows:
   tests:
     jobs:
       - linux
-      - swiftlint
-      - authlinux
+      - linux-auth
       - linux-release
+      - swiftlint
       # - macos
