--- a/circle.yml
+++ b/circle.yml
@@ -1,63 +1,24 @@
 version: 2
 
 jobs:
-  macos:
-    macos:
-      xcode: "9.2"
-    steps:
-      - checkout
-      - run: swift build
-      - run: swift test
-
-
   linux:
     docker:
-      - image: codevapor/swift:4.1
-      - image: redis:3.2
+      - image: vapor/swift:5.0
+      - image: redis:5.0
     steps:
       - checkout
       - run: swift build
       - run: swift test
-
-
   linux-release:
     docker:
-      - image: codevapor/swift:4.1
-      - image: redis:3.2
+      - image: vapor/swift:5.0
+      - image: redis:5.0
     steps:
       - checkout
       - run: swift build -c release
-
-  swiftlint:
-     docker:
-       - image: norionomura/swiftlint
-     steps:
-       - checkout
-       - run: swiftlint --strict
-       
-
-  linux-auth:
-    docker:
-      - image: codevapor/swift:4.1
-      - image: redis:3.2
-        command: >
-          --requirepass secret
-    steps:
-      - checkout
-      - run: swift build
-      - run:
-          name: Run Tests
-          command: swift test
-          environment:
-            REDIS_PASSWORD: secret
-      - run: swift build -c release
-    
 workflows:
   version: 2
   tests:
     jobs:
       - linux
-      - linux-auth
       - linux-release
-      # - swiftlint
-      # - macos
