--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,9 +26,9 @@ jobs:
           - env: { os: ubuntu-latest }
             services: 
               redis: { image: redis, ports: [ '6379:6379' ] } 
-              redis2: { image: redis, ports: [ '6379:6379' ] } 
-            redis_url_1: redis://redis:6379
-            redis_url_2: redis://redis2:6379
+              redis2: { image: redis, ports: [ '6380:6379' ] } 
+            redis_url_1: redis://localhost:6379
+            redis_url_2: redis://localhost:6380
     runs-on: ${{ matrix.env.os }}
     container: ${{ matrix.env.image }}
     services: ${{ matrix.services }}
@@ -38,7 +38,7 @@ jobs:
         with:
           xcode-version: ${{ matrix.env.toolchain }}
         if: ${{ matrix.env.toolchain != '' }}
-      - name: Set up Redis server via Homebrew
+      - name: Set up Redis servers via Homebrew
         if: ${{ matrix.env.toolchain != '' }}
         run: brew install redis && redis-server /usr/local/etc/redis.conf --sentinel --daemonize yes && redis-server /usr/local/etc/redis.conf --sentinel --daemonize yes --port 6380
       - name: Check out Redis
