--- a/.github/redis1.conf
+++ b/.github/redis1.conf
@@ -43,11 +43,11 @@ daemonize yes
 
 # When running daemonized, Redis writes a pid file in /usr/local/var/run/redis.pid by
 # default. You can specify a custom pid file location here.
-pidfile "/usr/local/var/run/redis-2.pid"
+pidfile "/usr/local/var/run/redis-1.pid"
 
 # Accept connections on the specified port, default is 6379.
 # If port 0 is specified Redis will not listen on a TCP socket.
-port 6380
+port 6379
 
 # TCP listen() backlog.
 #
@@ -175,7 +175,7 @@ rdbcompression yes
 rdbchecksum yes
 
 # The filename where to dump the DB
-dbfilename "dump2.rdb"
+dbfilename "dump1.rdb"
 
 # The working directory.
 #
@@ -185,7 +185,7 @@ dbfilename "dump2.rdb"
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir "/usr/local/var/db/redis2"
+dir "/usr/local/var/db/redis"
 
 ################################# REPLICATION #################################
 
