--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,6 @@ jobs:
         env: ${{ fromJSON(needs.getcidata.outputs.environments) }}
     runs-on: ${{ matrix.env.os }}
     container: ${{ matrix.env.image }}
-    services: ${{ matrix.services }}
     steps: 
       - name: Select toolchain
         uses: maxim-lobanov/setup-xcode@v1.2.1
@@ -45,13 +44,13 @@ jobs:
         run: redis-server .github/redis1.conf
 
       - name: Test Redis 1 connection
-        run: redis-cli -u ${{ matrix.redis_url_1 }} INFO
+        run: redis-cli -u redis://localhost:6379/0 INFO
       - name: Test Redis 2 connection
-        run: redis-cli -u ${{ matrix.redis_url_2 }} INFO
+        run: redis-cli -u redis://localhost:6380/0  INFO
       - run: cat .github/workflows/test.yml
       - name: Run tests with Thread Sanitizer
         timeout-minutes: 20
         run: swift test --enable-test-discovery --sanitize=thread
         env:
-          REDIS_URL_1: ${{ matrix.redis_url_1 }}
-          REDIS_URL_2: ${{ matrix.redis_url_2 }}
+          REDIS_URL_1: redis://localhost:6379/0
+          REDIS_URL_2: redis://localhost:6380/0 
