--- a/.github/redis2.conf
+++ b/.github/redis2.conf
@@ -185,7 +185,7 @@ dbfilename "dump2.rdb"
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir "/private/tmp/redis2"
+dir "/tmp/redis2"
 
 ################################# REPLICATION #################################
 
