--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,5 +52,7 @@ jobs:
         timeout-minutes: 20
         run: swift test --enable-test-discovery --sanitize=thread
         env:
-          REDIS_URL_1: redis://localhost:6379/0
-          REDIS_URL_2: redis://localhost:6380/0 
+          REDIS_HOST: localhost
+          REDIS_PORT: 6379
+          REDIS_2_HOST: localhost
+          REDIS_2_PORT: 6380
