--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,11 +48,10 @@ jobs:
       - name: Test Redis 2 connection
         run: redis-cli -u redis://localhost:6380/0 INFO
 
-      - name: Run tests with Thread Sanitizer
+      - name: Run 'RedisTests' tests with Thread Sanitizer
         timeout-minutes: 20
-        run: swift test --enable-test-discovery --sanitize=thread
-        env:
-          REDIS_HOSTNAME: localhost
-          REDIS_PORT: 6379
-          REDIS_HOSTNAME_2: localhost
-          REDIS_PORT_2: 6380
+        run: swift test --enable-test-discovery --sanitize=thread --filter RedisTests
+
+      - name: Run 'MultipleRedisTests' tests with Thread Sanitizer
+        timeout-minutes: 20
+        run: swift test --enable-test-discovery --sanitize=thread --filter MultipleRedisTests
