github actions: fix log file path for redis config

--- a/.github/redis1.conf
+++ b/.github/redis1.conf
@@ -2,7 +2,4 @@ daemonize yes
 pidfile "/usr/local/var/run/redis-1.pid"
 port 6379
 loglevel notice
-logfile "/usr/local/var/log/redis-1.log"
-databases 1
-appendonly no
-hz 10
+logfile "/var/log/redis-1.log"
