--- a/.github/redis2.conf
+++ b/.github/redis2.conf
@@ -2,7 +2,4 @@ daemonize yes
 pidfile "/usr/local/var/run/redis-2.pid"
 port 6380
 loglevel notice
-logfile "/usr/local/var/log/redis-2.log"
-databases 1
-appendonly no
-hz 10
+logfile "/var/log/redis-2.log"
