--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Redis via Homebrew (Mac)
-        if: ${{ matrix.env.toolchain != '' }}
+        if: ${{ startsWith(matrix.env.os, 'macos') }}
         run: brew install redis 
 
       - name: Install Redis via apt-get (Ubuntu)
