--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
         run: brew install redis 
 
       - name: Install Redis via apt-get (Ubuntu)
-        if: ${{ matrix.env.toolchain == '' }}
+        if: ${{ startsWith(matrix.env.os, 'ubuntu') }}
         run: apt-get update && apt-get install -y redis
 
       - name: Start Redis 1
